fix: text overflow in profile

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -19,7 +19,5 @@
 @media screen and (max-width: 768px) {
   .elements {
     grid-template-columns: minmax(0, 1fr);
-    width: calc(282/320 *100%);
-    grid-gap: 20px;
   }
 }
