--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,7 +6,6 @@
 
 @media screen and (max-width: 768px) {
   .profile__info {
-    width: max-content;
     justify-content: center;
     margin-bottom: 36px;
   }
