--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -6,6 +6,9 @@
   font-size: 18px;
   line-height: 22px;
   grid-area: job;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
