--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -16,6 +16,5 @@
     margin: 0 10px 9px 0;
     font-size: 22px;
     line-height: 27px;
-    text-align: center;
   }
 }
